[package]
name = "rust-attack-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# redis = "0.21.4"
# reqwest = { version = "0.11", features = ["json"] }
# chrono = "0.4"

lambda_runtime = "0.4.1"
lambda_http = "0.4.1"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"