[package]
name = "rust-attack-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.4"
chrono = "0.4"
http = "0.2"
simple_logger = "1.11.0"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
tracing = { version = "0.1.30", features = ["log"] }
log = "^0.4"
time = "0.3.7"
lambda_runtime = "0.5.0"
lambda_http = "0.5.0"
serde = "^1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "^1.0"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls","json"]